--- a/views/all-posts.handlebars
+++ b/views/all-posts.handlebars
@@ -12,6 +12,9 @@
     <div class="card-body">
       {{body}}
     </div>
+    <div>
+    <btn><a href="/dashboard/new"> New Post</a></btn>
+  </div>
   </article>
   {{/each}}
 </div>
