--- a/views/layouts/dashboard.handlebars
+++ b/views/layouts/dashboard.handlebars
@@ -24,10 +24,10 @@
   <main class="col-auto">
     {{{body}}}
   </main>
-
-  <footer class="footer flex-row justify-center">
-    <a href="/dashboard/new">➕ New Post</a>
+<footer class="footer flex-row justify-center">
+    <a href="/dashboard/new">:heavy_plus_sign: New Post</a>
   </footer>
+  
 </body>
 
 <script src="/javascript/logout.js"></script>
