--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,8 +29,8 @@
           </button>
           <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true tabindex=" 1">
             <span class="mdc-tab__content">
-            <a href="/dashboard">  <span class="mdc-tab__icon material-icons" aria-hidden="true">Dashboard</span></a>
-              <span class="mdc-tab__text-label">Dashboard</span>
+            <a href="/dashboard">  <span class="mdc-tab__icon material-icons" aria-hidden="true">Dashboard</span>
+              <span class="mdc-tab__text-label">Dashboard</span></a>
             </span>
             <span class="mdc-tab-indicator mdc-tab-indicator--active">
               <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
