--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -71,7 +71,10 @@
   <main class="col-auto">
     {{{body}}}
   </main>
-
+<footer class="footer flex-row justify-center">
+    <a href="/dashboard/new"> + New Post</a>
+  </footer>
+  
   <footer class="flex-row justify-center">
     &copy; Link
   </footer>
