--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -3,8 +3,8 @@
   <li>
     <article class="post">
       <div class="title">
-        <a href="{{post.post_url}}" target="_blank">{{post.title}}</a>
-        <span>({{post.post_url}})</span>
+        <a href="/post/{{post.id}}" target="_blank">{{post.title}}</a>
+        
       </div>
       <div class="meta">
         created by {{post.user.username}} on
