--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,9 +1,9 @@
 :root {
-  --primary: #ccdad1;
-  --secondary: #9caea9;
-  --tertiary: #788585;
-  --light-dark: #6f6866;
-  --dark: #38302e;
+  --primary: #89e6aa;
+  --secondary: #549b87;
+  --tertiary: #406363;
+  --light-dark: #0c4b22;
+  --dark: #062e0e;
   --border-radius: 0.3rem;
 }
 
