--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -17,48 +17,19 @@
     <div class="mdc-tab-scroller">
       <nav class="mdc-tab-scroller__scroll-area">
         <div class="mdc-tab-scroller__scroll-content">
-          <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true tabindex=" 0">
-            <span class="mdc-tab__content">
-            <a href="/"><span class="mdc-tab__icon material-icons" aria-hidden="true">Home</span></a>
-              <span class="mdc-tab__text-label">Home</span>
-            </span>
-            <span class="mdc-tab-indicator mdc-tab-indicator--active">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-            </span>
-            <span class="mdc-tab__ripple"></span>
+          <button >
+            <a href="/">Home</span></a>
           </button>
-          <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true tabindex=" 1">
-            <span class="mdc-tab__content">
-            <a href="/dashboard">  <span class="mdc-tab__icon material-icons" aria-hidden="true">Dashboard</span>
-              <span class="mdc-tab__text-label">Dashboard</span></a>
-            </span>
-            <span class="mdc-tab-indicator mdc-tab-indicator--active">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-            </span>
-            <span class="mdc-tab__ripple"></span>
-
-          </button>
-          <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true tabindex=" 2">
-            <span class="mdc-tab__content">
-             <a href="/login"><span class="mdc-tab__icon material-icons" aria-hidden="true">Login</span></a>
-              <span class="mdc-tab__text-label">Login</span>
-            </span>
-            <span class="mdc-tab-indicator mdc-tab-indicator--active">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-            </span>
-            <span class="mdc-tab__ripple"></span>
-
-          </button>
-          <button class="mdc-tab mdc-tab--active" role="tab" aria-selected="true tabindex=" 3">
-            <span class="mdc-tab__content">
-            <a href="/">  <span class="mdc-tab__icon material-icons" aria-hidden="true" id="logout-link">Logout</span></a>
-              <span class="mdc-tab__text-label">Logout</span>
-            </span>
-            <span class="mdc-tab-indicator mdc-tab-indicator--active">
-              <span class="mdc-tab-indicator__content mdc-tab-indicator__content--underline"></span>
-            </span>
-            <span class="mdc-tab__ripple"></span>
-
+          <button>
+            <a href="/dashboard">  Dashboard
+              </button>
+          <button>
+            <a href="/login">Login</a>
+              </button>
+          <button >
+           
+            <a href="/" id="logout-link">Logout</a>
+              
           </button>
         </div>
       </nav>
